# d-scribe

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json
.cursor/rules/: d-scribe.mdc
.github/workflows/: debug-signing-key.yml  publish.yml
src/: App.css  App.tsx
src-tauri/: 2  Cargo.toml  build.rs  tauri.conf.json
src-tauri/binaries/: README.md  download-whisper.ps1
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  paths.rs  project.rs
src-tauri/src/audio/: buffer.rs  capture.rs  mod.rs
src-tauri/src/discord_rpc/: client.rs  events.rs  ipc.rs  mod.rs  token_store.rs
src-tauri/src/export/: mod.rs  srt.rs  vtt.rs
src-tauri/src/session/: mod.rs  recorder.rs
src-tauri/src/transcription/: backend.rs  mod.rs  model_download.rs  remote_api.rs  wav_extract.rs  whisper_cli.rs
src/components/: PlaybackBar.css  PlaybackBar.tsx  Session.css  Session.tsx  Settings.css  Settings.tsx  StatsPanel.css  StatsPanel.tsx
~/.tauri/: myapp.key.pub
