[package]
name = "d-scribe"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "d_scribe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["transcription-whisper-cli"]
transcription-whisper-cli = []
transcription-whisper-rs = ["dep:whisper-rs"]
transcription-vosk = ["dep:vosk"]
transcription-openai = []

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-log = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
reqwest = { version = "0.11", features = ["json"] }
http = "1"
uuid = { version = "1", features = ["v4"] }
lazy_static = "1"
hound = "3"
chrono = "0.4"
whisper-rs = { version = "0.4", optional = true }
vosk = { version = "0.3", optional = true }

[target.'cfg(windows)'.dependencies]
wasapi = "0.22"

[target.'cfg(not(windows))'.dependencies]
cpal = "0.15"

